Add due-process bundle flags and standards hardening

--- a/web/index.html
+++ b/web/index.html
@@ -84,6 +84,7 @@
         <nav class="tabs">
           <button class="tab active" data-view="dashboard">Dashboard</button>
           <button class="tab" data-view="evidence">Evidence</button>
+          <button class="tab" data-view="due-process">Due Process</button>
           <button class="tab" data-view="election">Election</button>
           <button class="tab" data-view="warrant">Warrant</button>
           <button class="tab" data-view="execution">Execution</button>
@@ -124,6 +125,19 @@
             <section class="card">
               <h3>Event Streams</h3>
               <div id="events"></div>
+            </section>
+          </div>
+        </section>
+
+        <section id="view-due-process" class="view">
+          <div class="grid">
+            <section class="card">
+              <h3>Continuity</h3>
+              <div id="continuity-panel"></div>
+            </section>
+            <section class="card">
+              <h3>Shutdown</h3>
+              <div id="shutdown-panel"></div>
             </section>
           </div>
         </section>
